deploy/kyverno/deny-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-root-containers
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-runAsNonRoot
      match:
        any:
          - resources:
              kinds: ["Pod"]
              namespaces: ["payments"]
      validate:
        message: "Containers must not run as root. Set runAsNonRoot: true."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
            containers:
              - (name): "*"
                securityContext:
                  runAsNonRoot: true
